@startuml

class Main{
    -static Main instance
    -Stage stage
    +main()
    +start()
    +sendRegisterLocationPage()
    +sendWeatherInformationPage()
    +sendSettingPage()
    -replaceSceneContent()
    -checkUserExists()
    +static Main getInstance() return instance

}

class RegisterLocationPageView{
  FXML
}

class WeatherInformationPageView{
  FXML
}

class SettingPageView{
  FXML
}

class FirebaseConnectionClass{
  -KEY
  -URL
  +FirebaseConnectionClass()
  -updateContentsJson()
}

class RegisterLocationPageController{
  -errorLabelRegisterPage: @FXML Label
  -inputCityName: @FXML TextField
  -fahrenheitRadioButton: @FXML RadioButton
  -celsiusRadioButton: @FXML RadioButton
  +RegisterLocationPageController()
  -loadFXML()
  #registerLocationBtn()
  +initialize()
}

class WeatherInformationPageController{
  -labelLocation: @FXML Label
  -labelWeather: @FXML Label
  -labelTemp: @FXML Label
  -labelUnit: @FXML Label
  -btn3hour: @FXML Button
  -btn6hour: @FXML Button
  -btn9hour: @FXML Button
  -imageActivity1: @FXML ImageView
  -imageActivity2: @FXML ImageView
  -imageActivity3: @FXML ImageView
  -imageActivity4: @FXML ImageView
  -imageActivity5: @FXML ImageView
  -itemWeatherImage: @FXML ImageView
  -itemTempImage: @FXML ImageView
  -windConditionImage: @FXML ImageView
  -backgroundImage: @FXML ImageView
  +WeatherInformationPageController()
  -loadFXML()
  #goToSettingPage()
  #changeWeatherTimeBtn()
  -changeLayoutByHour()
  -makeImagePath()
  +initialize()
}

class SettingPageController{
  -locationName: @FXML TextField
  -celsiusRadioButton: @FXML RadioButton
  -fahrenheitRadioButton: @FXML RadioButton
  -labelErrorMessage: @FXML Label
  -labelSuccessMessage: @FXML Label
  -closeSettingPageBtn: @FXML Button
  +SettingPageController()
  -loadFXML()
  #applyChanges()
  #goToWeatherInformationPage()
  +initialize()
}

class GoodDayModel{
  +GoodDayModel()
  +setUserSetting()
  -searchCityID()
  +getUserData()
  +findContentsImgName()
  +fileReaderFunction()
  +deleteFileFunction()
}

class OpenWeatherMapAPI{
  -String apiKey;
  +OpenWeatherMapAPI() // Prepare data
  +openWeatherMap() resultWeatherInformation
  -convertWindConditionName()
  -convertWeatherSimply()
  -getTemperature()
  -getAllowingConnectionFlag()
}

Main -- RegisterLocationPageView
Main -- WeatherInformationPageView
Main -- SettingPageView
Main -- FirebaseConnectionClass
RegisterLocationPageView -- RegisterLocationPageController
WeatherInformationPageView -- WeatherInformationPageController
SettingPageView -- SettingPageController
SettingPageController -- GoodDayModel
RegisterLocationPageController -- GoodDayModel
WeatherInformationPageController -- GoodDayModel
WeatherInformationPageController -- OpenWeatherMapAPI
GoodDayModel -- OpenWeatherMapAPI

@enduml